# FiapPharmasense

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  styles.css
notebooks/: analise_estoque.ipynb  analise_logistica.ipynb  importar_dados.ipynb
src/: main.py
