[project]
name = "notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "matplotlib>=3.9.2",
    "pydeck>=0.9.1",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
    "streamlit>=1.51.0",
    "ipykernel>=7.1.0",
    "plotly>=6.5.0",
]
