[project]
name = "notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.9.2",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "psycopg2-binary>=2.9.9",
    "pydeck>=0.9.1",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
    "streamlit>=1.51.0",
]
